--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SignupActivity"/>
+        <activity android:name=".SignupActivity" />
 
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".LoginActivity" />
+
+        <activity android:name=".NotesActivity" />
+
+        <activity android:name=".AddNoteActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
